# pacman-app

./: README.md  pyproject.toml  settings.py
pacman_app/: __init__.py  background.py  drawer.py  fruit.py  game.py  pacdots.py  pacman.py  pixels.py
pacman_app/characters/: __init__.py  character.py  pacman.py  speed.py  spritesheet.py
pacman_app/characters/ghosts/: __init__.py  blinky.py  clyde.py  ghost.py  ghosts.py  inky.py  mode.py  pinky.py
pacman_app/ghosts/: __init__.py  blinky.py  clyde.py  ghost.py  ghosts.py  inky.py  mode.py  modes.py  pinky.py
pacman_app/map/: __init__.py  character_position.py  direction.py  geometry.py  map.py  point.py  position.py  position_coordinate.py  tile.py
pacman_app/sprites/: __init__.py  blinky_sprite.py  clyde_sprite.py  fruit_sprite.py  inky_sprite.py  letters.py  numbers.py  pacman_sprite.py  pinky_sprite.py  spritesheet.py
resources/: map.txt
scripts/: main.py
